# restaurant-management-system

./: .dockerignore  .env  .env.example  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
api/: urls.py  views.py
core/: settings.py
docs-and-diagrams/: er-diagrams.txt  sequence-diagram.txt  urms-api-docs-part1.md  urms-api-docs-part2.md  urms-api-docs-part3.md  urms-api-docs-part4.md  urms-api-docs-part5.md  urms-api-docs-part6.md  urms-api-flow.mermaid  urms-api-index.md  urms-cicd.mermaid  urms-class-diagram.mermaid  urms-component-diagram.mermaid  urms-data-dictionary.md  urms-data-flow.mermaid  urms-deployment.mermaid  urms-documentation-index.md  urms-erd-enhanced.mermaid  urms-frd.md  urms-module-dependency.mermaid  urms-order-flow.mermaid  urms-payment-flow.mermaid  urms-security-flow.mermaid  urms-sequence-delivery.mermaid  urms-sequence-inventory.mermaid  urms-sequence-order.mermaid  urms-sequence-reservation.mermaid  urms-system-architecture.mermaid  urms-user-journey.mermaid
