[project]
name = "restaurant-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]
prod = [
    "gunicorn>=23.0.0",
]
